--- a/project notebook.ipynb
+++ b/project notebook.ipynb
@@ -4172,14 +4172,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "754f00f8",
+   "metadata": {},
+   "source": [
+    "### Loading the Cleaned Data to be used in Tableau"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "92eb0146",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('')"
+    "df.to_csv('clean_aviation.csv',index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a1f82a4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_fatal_cases.to_csv('fatal_stats.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "3f403f77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_us.to_csv(\"us_stats.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5003b291",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
